# Marvin_Haves_Fun_2309

./: .gitignore  .gitmodules  README.md
00_Git_Test/: Add_File_Test.txt  Crawler_to_Zhihu.txt  Test Master Branch.txt  Test for Marvin's Branch.txt  discard test.txt  gitCloneWithoutActualFiles.txt
10_PowerShell/: 001.txt  002.txt  003.txt  PS_GUI.ps1  Prime_Number.ps1  Prime_number_result.txt  SimpleHasher.ps1  hello_world.ps1  if_ps1_cannot_excute.txt  top_10_memory_cost.ps1
11_Cmd/: ToZip.bat  清空GeneratedFiles.bat
11_Cmd/findstr_test/: abc.txt  test.bat  test2.bat
14_Cmd_calls_Python/: grid sticky.txt  pipenv说明.txt  pyinstaller.txt
14_Cmd_calls_Python/CSV/: transfer_txt_2_csv.py
14_Cmd_calls_Python/HERM/: Action.py  EscapeTheDragon.py  HERM.psd  (+4 more)
31_C_Cpp/20250218_Textinfo_Arbitration/: CMakeLists.txt  cmake_install.cmake  textinfo_arbitration.cpp
33_CMake/CSDN_Cmake/Project2/: CMakeCache.txt  CMakeLists.txt  HELLO.cbp  Makefile  cmake_install.cmake  main.cpp
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/: CMakeLists.txt
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/demo02_p146_worker_manager/: boss.cpp  boss.hpp  employee.cpp  employee.hpp  main.cpp  manager.cpp  manager.hpp  worker.hpp  worker_manager.cpp  worker_manager.hpp  笔记.txt
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src00/: s00_hello.c  s01_bool_cin.cpp  s02_array_lesson_42.cpp  s03_two_dimension_array_lesson_47.cpp  s04_pointer_lesson_56.cpp  s05_struct_P64.cpp  s06_Contact_Menu_P74.cpp
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src01/: p106_constructor_and_deconstructor.cpp  p114_objective_module_and_this_pointer.cpp  p118_friends.cpp  p121_operator_overloading.cpp  p84_memory_management.cpp  p89_reference.cpp  p95_func_enhanced.cpp  p99_class_and_object.cpp
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src01/p105_circle_center/: circle.cpp  circle.hpp  p105.cpp  point.cpp  point.hpp
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src02/: p127_inheritance.cpp  p135_polymorphic.cpp  p141_polymorphic_2.cpp  p143_file_operation.cpp
33_CMake/CSDN_Cmake/cmake_test_hello_world/00cmake/src03/: p167_func_template.cpp  p167_template.cpp  p172_func_template_overload.cpp  p173_func_template_for_class.cpp  p174_class_template.cpp
37_Conan/: conanfile.txt  笔记.txt
40_Python/: .gitignore
70_jenkins_plugins/: for jenkins env.ps1  jenkins pipeline plugins.txt
90_WechatMiniProgram/: app.json  project.config.json
(+443 files in other folders)
